@@ -3,103 +3,140 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.jakewharton.butterknife'
-
+    id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdk 32
-
+    compileSdk 34
+    namespace "com.vsca.vsnapvoicecollege"
     defaultConfig {
-        configurations.all {
-            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+        configurations.configureEach {
+            resolutionStrategy {
+                force 'androidx.lifecycle:lifecycle-livedata-core:2.4.1'
+            }
         }
+
         applicationId "com.vsca.vsnapvoicecollege"
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        minSdk 24
+        targetSdk 34
+        versionCode 52
+        versionName "4.7"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     dexOptions {
         preDexLibraries = false
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            matchingFallbacks = ['release']
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        enterprise {
+            matchingFallbacks = ['release']
+        }
+        debug {
+            matchingFallbacks = ['debug']
+        }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
+    }
+
+    viewBinding {
+        enabled = true
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
-
 repositories {
     mavenCentral()
-
     maven {
         url "https://s3.amazonaws.com/repo.commonsware.com"
     }
 }
+
+
 dependencies {
-//    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    kapt 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-core:2.4.1"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'com.android.support:appcompat-v7:30.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'commons-io:commons-io:2.13.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.test:core-ktx:1.6.1'
+    implementation 'com.google.firebase:firebase-messaging-ktx:24.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation 'com.jakewharton:butterknife:10.2.1'
-    kapt 'com.jakewharton:butterknife-compiler:10.2.1'
-
-    implementation 'com.karumi:dexter:6.0.1'
-    implementation 'de.hdodenhof:circleimageview:1.2.1'
-    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.karumi:dexter:6.0.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.google.code.gson:gson:2.4'
-    implementation 'de.hdodenhof:circleimageview:1.2.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation 'com.karumi:dexter:6.2.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.karumi:dexter:6.2.3'
+    implementation 'com.squareup.retrofit2:retrofit:2.10.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.12'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.12'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:29.3.1')
-    implementation 'com.google.firebase:firebase-messaging:20.1.3'
-    // Add the dependency for the Firebase SDK for Google Analytics
-    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-messaging:24.0.0'
+    implementation("com.google.firebase:firebase-analytics-ktx")
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation "androidx.core:core-ktx:+"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.13.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'com.google.android.play:core:1.9.0'
-    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
     //AWS s3 libraries
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.31'
-    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.31'
-    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.2.+'
-//    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.59.0'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.20.1'
+    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.25.0'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.github.omadahealth:swipy:1.2.3@aar'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.0'
+    implementation 'com.github.fornewid:neumorphism:0.3.0'
+    implementation("pl.droidsonroids.gif:android-gif-drawable:1.2.22")
+    //Dot indicator
+    implementation 'com.github.martinstamenkovski:ARIndicatorView:2.0.0'
+    implementation 'com.github.MackHartley:RoundedProgressBar:1.0'
+    //noinspection GradleCompatible
+    implementation 'com.google.android.material:material:1.12.0'
+    //Zooming Image
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
-//    //VideoSize Transcoder
-//    implementation 'net.ypresto.androidtranscoder:android-transcoder:0.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+    implementation 'androidx.biometric:biometric:1.1.0'
+}
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
+    ]
 }
 apply plugin: 'com.google.gms.google-services'
